<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/receiveUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/receive_user_name"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        android:layout_margin="15dp"
        />
    <EditText
        android:id="@+id/sendUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/send_user_name"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        />
    <EditText
        android:id="@+id/sendPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/send_user_password"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        />
    <EditText
        android:id="@+id/sendHostAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/send_host"
        android:text="@string/smtp_yeah_net"
        android:importantForAutofill="no"
        android:inputType="textUri"
        tools:ignore="TextFields"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"/>
    <EditText
        android:id="@+id/sendServerChanKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_chan_sckey"
        android:importantForAutofill="no"
        android:inputType="textUri"
        tools:ignore="TextFields"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/sendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_email"
            android:layout_marginStart="15dp"/>

        <CheckBox
            android:id="@+id/sendWechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_wechat"
            android:layout_marginStart="15dp"/>
        <CheckBox
            android:id="@+id/saveLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_log"
            android:layout_marginStart="15dp"/>
    </LinearLayout>

</LinearLayout>